# ui-md-pdf-parsing-diff

./: .gitignore  README.md  pyproject.toml
ui/: __init__.py  app.py
ui/static/: compare.css
ui/templates/: compare.html
