[project]
name = "ui-compare-md-pdf-parsing"
version = "0.1.0"
description = "Side-by-side PDF vs parsed Markdown comparison UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24,<2",
    "beautifulsoup4>=4.12,<5",
    "mistletoe>=1.3,<2",
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
    "python-multipart>=0.0.9",
    "aiofiles>=23,<25",
    "jinja2>=3.1,<4",
]

# Application layout: install dependencies only, do not build a wheel of this repo.
# Avoids fetching hatchling (build backend) on `uv sync` when PyPI is slow or blocked.
[tool.uv]
package = false
